--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
                         Cimpling , Siraman , Kesamben , Blitar
                         <a href="mailto:name@email.com">silvianadwipalupi16@gmail.com</a>
                     </div>
-                    <p class="lead mb-5"></p>
+                    <p class="lead mb-5">hello, my name is Silvi, I am 16 years old, I am the second child of two brothers, 
+                        my hobby is watching TV while doing my homework 
+                        , I like watching horror films, 
+                        my favorite food, I like everything, 
+                        I like snacks 
+                        , that's all my story, thank you</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
@@ -96,31 +101,31 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             2
-                            <sup>st</sup>
+                            <sup></sup>
                             KATA SMP GRUP C PI KEJUARAAN KARATE OK TEAM BLITAR CUP II 2023
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             2
-                            <sup>st</sup>
+                            <sup></sup>
                             KATA PERORANGAN KADET PUTRI FESTIVAL AND OPEN TOURNAMENT PIALA WALIKOTA MALANG 2023
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             3
-                            <sup>nd</sup>
+                            <sup></sup>
                             KATA BEREGU FESTIVAL SMP PUTRI PANPEL/VII/2022
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             3
-                            <sup>st</sup>
+                            <sup></sup>
                             KATA PERORANGAN CADET PUTRI BNNK BLITAR CUP 1 2023
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             3
-                            <sup>rd</sup>
+                            <sup></sup>
                             KATA PERORANGAN KADET PUTRI ATMAJAYA CUP 1 PIALA KETUA UMUM KONI KOTA MALANG 2023
                         </li>
                     </ul>
